sd/source/ui/unoidl/DrawController.cxx
@@ -468,7 +468,7 @@ void DrawController::fireChangeLayer( const css::uno::Reference< css::drawing::X
     {
         sal_Int32 nHandle = PROPERTY_ACTIVE_LAYER;
 
-        Any aNewValue ( *xNewLayer);
+        Any aNewValue (xNewLayer);
 
         Any aOldValue ;
 
